changed to pico cli